Refactoring code and file structure

--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 <!-- Page Header -->
 <!-- Set your background image for this header on the line below. -->
-<header class="intro-header" style="background-image: url('img/shelf-bg.jpg')">
+<header class="intro-header" style="background-image: url('/img/shelf-bg.jpg')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -18,20 +18,12 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <% for (var i = 0; i < books.length; i++) { %>
             <div class="post-preview">
-                <a href="/shelf/<%=i%>">
-                    <h2 class="post-title">
-                        <%=books[i].title %>
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Read More
-                    </h3>
-                </a>
-                <p class="post-meta">Written by <a href="#"><%=books[i].author%></a></p>
+                <h2 class="post-title">
+                    <%=book.title%>
+                </h2>
+                <p class="post-meta">Written by <a href="#"><%=book.author%></a></p>
             </div>
-            <hr>
-        <% } %>
         </div>
     </div>
 </div>
