--- a/src/views/shelf.ejs
+++ b/src/views/shelf.ejs
@@ -20,7 +20,7 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <% for (var i = 0; i < books.length; i++) { %>
             <div class="post-preview">
-                <a href="/shelf/<%=i%>">
+                <a href="/shelf/<%=books[i].id%>">
                     <h2 class="post-title">
                         <%=books[i].title %>
                     </h2>
