--- a/src/views/book.ejs
+++ b/src/views/book.ejs
@@ -15,33 +15,51 @@
 </header>
 
 <!-- Shelf Content -->
- <div class='container'>
-    <div class='table-responsive'>
-        <table class='table'>
-            <tbody>
-                <tr>
-                    <td>
-                        <img src="<%=book.poster_url%>" style="width:150px;">
-                    </td>
-                    <td>
-                        <div class="post-preview">
-                            <h2 class="post-title">
-                                <%=book.title%> (<%= new Date(book.release_date).getFullYear() %>)
-                            </h2>
-                            <div class="post-subtitle" *ngIf='showDescription'>
+ <div class="container">
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            <h2 class="post-title"><%=book.title%> (<%= new Date(book.release_date).getFullYear() %>)</h2>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="<%=book.poster_url%>" style="width:150px;">
+                </div>
+                <div class="col-md-8">
+                    <div class="post-preview">
+                        <div class="post-subtitle">
                                 <%=book.description%>
-                            </div>
-                            <p></p>
-                            <p class="post-meta">Written by <%=book.author%></p>
-                            <p class="post-meta">Genre: <%=book.genre%></p>
-                            <p class="post-meta">Pages: <%=book.pages%></p>
-                            <p class="post-meta">Rating: <%=book.rating%></p>
                         </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                    </div>
+                    <br>
+                    <ul class="list-group">
+                        <li class="list-group-item"><strong>Author: </strong><%=book.author%></li>
+                        <li class="list-group-item"><strong>Genre: </strong><%=book.genre%></li>
+                        <li class="list-group-item"><strong>Pages: </strong><%=book.pages%></li>
+                        <li class="list-group-item"><strong>Rating: </strong><%=book.rating%></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
- </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Comments</h3>
+        </div>
+        <div class="panel-body">
+            <% for (var i = 0; i < comments.length; i++) { %>
+                <div class="row">
+                    <div class="col-md-10">
+                        <p><%= comments[i].user_comment %></p>
+                    </div>
+                    <div class="col-md-2">
+                        <span class="label label-primary"><%= comments[i].username %></span>
+                    </div>
+                </div>
+                <hr>
+            <% } %>
+        </div>
+    </div>
+</div>
 <hr>
 <% include ../partials/footer %>
